Add build script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A project management application.",
   "private": true,
   "scripts": {
-    "start": "npm start --prefix client"
+    "start": "npm start --prefix client",
+    "build": "npm build --prefix client"
   },
   "keywords": ["project", "kanban", "react"],
   "author": "Andy Bettisworth",
