--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "kanban",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A project management application.",
   "private": true,
   "scripts": {
     "start": "npm start --prefix client",
     "build": "npm build --prefix client"
   },
-  "keywords": ["project", "kanban", "react"],
+  "keywords": [
+    "project",
+    "kanban",
+    "react"
+  ],
   "author": "Andy Bettisworth",
   "license": "MIT"
 }
