--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:run": "cypress run",
+    "cypress:open": "cypress open",
+    "ci:cypress-run": "start-server-and-test start 3000 cypress:run"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,6 +32,8 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^3.6.1"
+    "concurrently": "^5.0.0",
+    "cypress": "^3.6.1",
+    "start-server-and-test": "^1.10.6"
   }
 }
