--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "@wurde/components": "^1.29.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
