--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "store2": "^2.10.0",
     "styled-components": "^4.4.0"
   },
   "scripts": {
